--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://alexander-boychenko-jd.github.io/dazn-roblox",
   "name": "app",
   "version": "0.1.0",
   "private": true,
@@ -18,6 +19,9 @@
     "react-scripts": "5.0.1",
     "sass": "^1.80.4",
     "web-vitals": "^2.1.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
   "scripts": {
     "start": "react-scripts start",
